# tui_hn_app

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  config.example.ron  config.ron
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: render_benchmark.rs
docs/: ACCESSIBILITY.md  user_guide.md
src/: app.rs  config.rs  lib.rs  main.rs  tui.rs
src/api/: mod.rs
src/internal/: bookmarks.rs  cache.rs  history.rs  mod.rs  models.rs  notification.rs  search.rs
src/internal/ui/: app.rs  keybinding_validator.rs  keybindings.rs  keybindings_default.rs  log_viewer.rs  mod.rs  sort.rs  theme_editor.rs  view.rs
src/utils/: datetime.rs  html.rs  html_parser.rs  mod.rs  theme.rs  theme_loader.rs  url.rs
tests/: api_integration.rs  html_extract.rs  property_tests.rs  rendering.rs  visual_snapshot.rs
tests/snapshots/: rendering__log_viewer_render.snap
themes/: ayu.json  flexoki.json  ghost-in-the-shell.json  high_contrast.ron  zoegi.json
