[package]
name = "tui-hn-app"
version = "0.6.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
comrak = "0.48.0"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
html2text = "0.16.4"
jiff = { version = "0.2.16", features = ["serde"] }
once_cell = "1.21.3"
open = "5.3.3"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
ron = "0.12.0"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
syntect = "5.3.0"
textwrap = "0.16.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

[dev-dependencies]
mockito = "1.7.0"
